# agentic-course

./: .gitignore  README-he.md  README.md  assignment-en.md  assignment-he.md  setup-guide-en.md  setup-guide-he.md
HW/: task1-hw.md  task2-hw.md
HW/app/backend/: pyproject.toml  run_api.py
HW/app/backend/app/: main.py
HW/app/backend/app/api/: products.py
HW/app/backend/app/core/: config.py  logging.py
HW/app/backend/app/data/: seed_products.py
HW/app/backend/app/models/: error.py  product.py
HW/app/backend/app/services/: product_service.py
HW/app/backend/tests/: conftest.py  test_products.py
HW/app/frontend/: biome.json  build.ts  package.json
HW/app/frontend/src/: App.tsx  index.css  index.html  index.tsx
HW/app/frontend/src/components/: ProductCard.tsx  ProductGrid.tsx
HW/app/frontend/src/components/ui/: card.tsx
HW/app/frontend/src/lib/: api-client.ts  logger.ts
HW/app/frontend/src/types/: error.ts  product.ts
HW/app/frontend/styles/: globals.css
HW/tickets/: KOD-1.md  KOD-2.md
Presentation/: claude-tools-config.html
